Wednesday, November 4, 2009
	Chris Thielen:
		* Plugged some memory leaks that moses7 mentioned in #epiar
		  and redesigned Image::ConvertToTexture() a bit to avoid them

Tuesday, November 3, 2009
	Chris Thielen:
		* Fixed 'brown planet' bug
		* Fixed animation loading bug
	Matt Zweig
		* Cleaned up the TAG game so that it is more understandable.
		* The AI Plan model used here could be adapted for more complex scenes.

Monday, October 19, 2009
	Chris Thielen:
		* Updated OS X SDL files to v1.2.14 for OS X 10.6 support

Thursday, August 27, 2009
	Chris Thielen:
		* Added a BUILDING file to describe the build process on various architectures

Thursday, July 23, 2009
	Chris Thielen:
		* Began adding a framerate counter
		* Fixed bug with quadrant.cpp missing
		* Do we need a resource manager to pass around simulation,
		hud, etc. or is there another way to do this?

Tuesday, June 23, 2009
	Chris Thielen:
		* Obey options.xml for starfield density

Monday, February 23, 2009
	Chris Thielen:
		* Implemented 'echo' function for Lua console
		* Renamed SpriteList to SpriteManager

Sunday, February 22, 2009
	Chris Thielen:
		* More console & Lua work

Saturday, February 21, 2009
	Chris Thielen:
		* Fixed an issue with fonts not drawing correctly under Mac OS X
		* Beginnings of console work
		* Fixed GCC compiler identification

Wednesday, February 18, 2009
	Chris Thielen:
		* (Outside) Lua research for in-game bridge
		* Beginnings of HUD messaging system

Wednesday, February 4, 2009
	Chris Thielen:
		* Changed planet radar color to something more visible
		* Cleaned up compiler warnings under GCC 4.3

Monday, February 2, 2009
	Chris Thielen:
		* Received permission from Brian Kent to distribute his
		Visitor bitmap font (choosen by Niros, the designer of the UI
		and HUD) with Epiar. It is visitor1.ttf and visitor2.ttf, and
		the similarly named .af files.

Sunday, February 1, 2009
	Chris Thielen:
		* Fixed a bug with glScissor (it doesn't use our established
		ortho??)